"Nota sobre límites de aproximación y retoques a gráficas"

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -452,8 +452,8 @@ b= \hbar^2\abs{\gamma}^2\chi_0^2 J_1(C_t).
 For figure \ref{fig:TempComparisson},we used $\kappa = 0.05\nu_0$ and calculated $\expval{m}$ in the region $\frac{\delta}{\nu_0}\in [-2,2]$. The positive half of the region corresponds to heating of the resonator and the negative part corresponds to cooling. We assume that the parameters are such that
 
 \begin{equation}
-\frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.1,
-\end{equation} so that corrections proportional to higher orders in $C_t$ could be disregarded.  As we can see in figure \ref{fig:TempRatio}, the corrected temperature is lower over the majority of the inspected detuning range. 
+\frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.05,
+\end{equation} so that corrections proportional to higher orders in $C_t$ could be disregarded.  As we can see in figure \ref{fig:TempRatio}, the corrected temperature is lower over a range around the minimum point. It must be noted that since terms of order $\frac{\delta_t}{\delta^2}$ the approximation does not hold as $\delta$ approaches 0. The approximation is also limited as $\frac{\delta}{\nu_0}$ grows above the resonance at -1, since we only keep one term for the correction to $\delta$,so as $|\delta|$ grows, more terms would be needed. Because of these reasons we limit ourselves to a region close to the resonance point. 
 
 \begin{figure}
 \includegraphics[scale=.5]{TempPropGorden1.pdf}
