Cambios a gráfica de proporciones, icluir grafica de sidebands

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -463,6 +463,13 @@ For figure \ref{fig:TempComparisson},we used $\kappa = 0.05\nu_0$ and calculated
 
 
 
+\begin{figure}
+\includegraphics[scale=.4]{SidebandsGorden1.pdf} 
+\caption{(a) Ratio between the sidebands. (b )Cooling Sidebands.  (c) Corrected and uncorrected cooling sideband near the temperature minimum. }
+\label{fig:SideBands}
+\end{figure}
+
+
 
 
 \section{Conclusions}\label{ConCl}
